@@ -1,3 +1,11 @@
+2013-06-22  The Parasithe  <bipbip500@hotmail.com>
+
+	* TestScreen.cs:
+	* Ubuntu.xnb:
+	* GREATClient.Linux.csproj:
+	* DrawableLabel.cs:
+	* GREATClient.Windows.csproj: 
+
 2013-06-17  The Parasithe  <bipbip500@hotmail.com>
 
 	* Game1.cs:
